; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pal_routines.c_pal_serial_putc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_pal_routines.c_pal_serial_putc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pal_serial_putc(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = call i32 @serial_putc(i8 signext %3)
  %5 = load i8, i8* %2, align 1
  %6 = sext i8 %5 to i32
  %7 = icmp eq i32 %6, 10
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @serial_putc(i8 signext 13)
  br label %10

10:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @serial_putc(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
